Edited index.html, script.js, main_style.css: Trying to solve the theme-button style on mobile, and finished theme-button js movement

--- a/style/main_style.css
+++ b/style/main_style.css
@@ -1,6 +1,3 @@
-@import url("./desktop_style.css");
-@import url("./mobile_style.css");
-
 :root {
     font-family: "Roboto Mono", serif;
     font-optical-sizing: auto;
@@ -146,14 +143,12 @@ table {
 }
 
 .theme-button{
-    width: 1em;
     height: 1.2em;
     justify-self: center;
     background-color: var(--button-color);
     border-radius: 100%;
     position: absolute;
     margin: 0.3em;
-    margin-right: 1.65em;
     box-shadow: -0.1em 0.2em 0.5em var(--alt-bg-color);
 }
 
@@ -444,6 +439,15 @@ footer{
 
     .current-page{
         text-decoration: overline double black;
+    }
+
+    .theme-button{
+        justify-self: center;
+        background-color: var(--button-color);
+        border-radius: 100%;
+        position: absolute;
+        margin: 0.3em;
+        box-shadow: -0.1em 0.2em 0.5em var(--alt-bg-color);
     }
 
 /* Hero Mobile CSS */
